--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 body {
-    background-color: 
-    hwb(199 56% 22%);
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
     margin: 5% 10%
 }
 
+.click-image {
+    cursor: pointer;
+}
+
 .watch-list {
-    color: #020201;
-    width:150px;
+    color: hsl(226, 80%, 29%);
     display: block;
     float: right;
-    height: 150px;
-    background-color: #f6e7cf;
     text-shadow: none;
-    overflow: scroll;
+    border-radius: 12px;
 }
 
 .header {
@@ -29,32 +29,25 @@ body {
 }
 
 .subtitle {
-    font-size: 30px;
+    font-size: 20px;
+    color: black;
+    text-shadow: none;
 }
 
 button {
     margin: 15px, 15px;
-    
+    cursor: pointer;
 }
-
-/* .card {
-    padding: 20px 0px;
-    display: inline-block;
-    width: 100%;
-    height: auto;
-}
-
-
-#cardInfo {
-    display:block;
-    float: left; 
-    width: 40%; 
-} */
 
 .episodes {
-    display: block;
+    display: inline block;
     float: left; 
     padding: 10px;
     margin: 10px;
     width: 25%;
+}
+
+.summary{
+    overflow: scroll;
+    height: 200px;
 }
